--- a/movie/package.json
+++ b/movie/package.json
@@ -31,6 +31,7 @@
     "@ngxs/store": "^3.7.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
