Finished upload image to cloudinary

--- a/movie/package.json
+++ b/movie/package.json
@@ -20,15 +20,18 @@
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@cloudinary/angular-5.x": "^1.5.2",
     "@ionic/angular": "^6.0.0",
     "@ng-select/ng-select": "^8.1.1",
     "@ngxs/devtools-plugin": "^3.7.3",
     "@ngxs/logger-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
+    "cloudinary-core": "^2.12.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
