--- a/movie/tsconfig.json
+++ b/movie/tsconfig.json
@@ -14,10 +14,9 @@
     "module": "es2020",
     "lib": ["es2018", "dom"],
     "paths": {
-      "@environment/*": ["src/app/environments/*"],
+      "@app/*": ["src/app/*"],
       "@services/*": ["src/app/services/*"],
-      //"@pipes/*": ["src/app/pipes/*"],
-      "@app/*": ["src/app/*"]
+      "@environment/*": ["src/environments/*"]
     },
     "resolveJsonModule": true,
     "esModuleInterop": true,
