--- a/movie/package.json
+++ b/movie/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && npx cap sync",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
@@ -24,12 +24,14 @@
     "@angular/router": "~13.2.2",
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "^3.4.3",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.5.0",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@cloudinary/angular-5.x": "^1.5.2",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "@ng-select/ng-select": "^8.1.1",
     "@ngxs/devtools-plugin": "^3.7.3",
     "@ngxs/logger-plugin": "^3.7.3",
@@ -52,7 +54,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "^3.4.3",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
