Research file system and fix bug when build to real device (50% process)

--- a/movie/package.json
+++ b/movie/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && npx cap sync && ionic capacitor run ios",
+    "build": "ng build && npx cap sync",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
