--- a/movie/package.json
+++ b/movie/package.json
@@ -29,6 +29,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "3.5.0",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/network": "^1.0.7",
     "@capacitor/status-bar": "1.0.8",
     "@cloudinary/angular-5.x": "^1.5.2",
     "@ionic/angular": "^6.0.0",
