Fix feedbacks and errors about the file system

--- a/movie/package.json
+++ b/movie/package.json
@@ -35,12 +35,14 @@
     "@ionic/angular": "^6.0.0",
     "@ionic/pwa-elements": "^3.1.1",
     "@ng-select/ng-select": "^8.1.1",
+    "@ngxs-labs/immer-adapter": "^3.0.5",
     "@ngxs/devtools-plugin": "^3.7.3",
     "@ngxs/logger-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "cloudinary-core": "^2.12.3",
     "immer": "^9.0.12",
     "jest-junit": "^13.2.0",
+    "ng-let": "^13.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uuid": "^8.3.2",
